# aura

./: .gitignore  pyproject.toml
evaluation/: llm_judge.py  test_orchestrator.py  test_questioner.py  test_rag.py
evaluation/datasets/: test_multiple_scenarios.json  test_one_scenario.json
pages/: Chat.py  Configuración.py
src/agents/: questioner.py
