[project]
name = "aura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-huggingface>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "unstructured>=0.18.15",
]
